test/domains/claridge/associativeStridableQuery.chpl
var D_associative: domain(int);
writeln(D_associative.strides);
